<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minWidth="500dp"
        android:minHeight="1000dp"
        android:padding="10dp">
        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_draw_close"
            android:layout_gravity="right"
            android:id="@+id/info_close">

        </Button>
        <ScrollView
            android:layout_margin="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    android:textAllCaps="true">

                </TextView>

                <com.ungdunguel.appphapluat.ui.ParagraphBgTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/introPara"
                    android:lineSpacingMultiplier="1.5"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:justificationMode="inter_word"
                    android:textSize="16dp"
                    android:scrollbars="none">

                </com.ungdunguel.appphapluat.ui.ParagraphBgTextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/published"
                    android:textAlignment="center"
                    android:layout_marginTop="50dp"
                    android:textColor="#000"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/youthUEL"
                    android:textAlignment="center"
                    android:layout_marginTop="0dp"
                    android:textColor="#555"
                    >
android:textSize="12dp"
                    android:textStyle="normal">
                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/content"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:textColor="#000"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contentAuthor"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:textColor="#555"
                    >
                    android:textSize="12dp"
                    android:textStyle="normal">
                </TextView>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/develop"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:textColor="#000"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/developer"
                    android:textAlignment="center"
                    android:layout_marginTop="0dp"
                    android:textColor="#555"
                    >
                    android:textSize="12dp"
                    android:textStyle="normal">
                </TextView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000"
                    android:layout_marginTop="20dp">

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"

                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="">
                </TextView>
                <com.ungdunguel.appphapluat.ui.ParagraphBgTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contactInfo"
                    android:lineSpacingMultiplier="1.25"
                    android:textColor="#666"></com.ungdunguel.appphapluat.ui.ParagraphBgTextView>
                <ImageView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_intro"
                    android:scaleType="fitStart"
                    >
                    <!--Add hinh image src vao day-->
                </ImageView>
            </LinearLayout>


        </ScrollView>

    </LinearLayout>
</layout>
